--- a/ppt/autoCheck-1.html
+++ b/ppt/autoCheck-1.html
@@ -239,8 +239,41 @@
         </section>
 
         <section>
-            <h1 style="color:red;">Q &amp; A</h1>
-            <h2>178502261@qq.com</h2>
+            <section>
+                <h2>conclusion</h2>
+                <ul>
+                    <li>
+                        pro: <br/>
+                        geb可模拟用户的鼠标操作，是有效的 web 项目自动化测试方案。
+                    </li>
+                    <li>
+                        con: <br/>
+                        需要测试人员通过编程实现，并具备 groovy + jquery 基础。
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>未来可研究方向</h3>
+                <ul>
+                    <li>
+                        基于程序代码，自动化产生 geb 测试用例。
+                    </li>
+                    <li>
+                        测试结果，提供更细节的 GUI 图形化分析报告
+                    </li>
+                </ul>
+            </section>
+        </section>
+
+        <section>
+            <h2>致谢</h2>
+            <p>感谢 苏州大学 <b>陈建明</b> 教授平日的指导<br/>
+                和带给本人软件测试方面的启发!</p>
+        </section>
+
+        <section>
+            <h2 style="color:red;">Thank You</h2>
+            <p>178502261@qq.com</p>
         </section>
     </div>
 </div>
