--- a/ppt/autoCheck-1.html
+++ b/ppt/autoCheck-1.html
@@ -237,14 +237,24 @@
                 <h3>检查点</h3>
                 <p>需补充内容...</p>
             </section>
+            <section>
+                <h3>数据池的使用</h3>
+                <p>
+                    <ul>
+                        <li>需要大量数据</li>
+                        <li>数据要随机</li>
+                        <li>DataFactory.jar的使用</li>
+                    </ul>
+                </p>
+            </section>
             <section style="text-align: center;">
                 <h3>手动测试 vs 自动测试</h3>
                 <div class="row">
                     <div class="col-md-2">
-                        手动测试:
+                        手动:
                     </div>
                     <div class="col-md-2">
-                        <span class="my-rect-green" style="font-size: 24px;padding: 20px;">测试计划</span>
+                        <span class="my-rect-yellow" style="font-size: 24px;padding: 20px;">测试计划</span>
                     </div>
                     <span class="arrow arrow-right col-md-1"></span>
                     <div class="col-md-2">
@@ -252,7 +262,7 @@
                     </div>
                     <span class="arrow arrow-right col-md-1"></span>
                     <div class="col-md-3">
-                        <span class="my-rect-yellow" style="font-size: 24px;padding: 20px;">手动整理测试报告</span>
+                        <span class="my-rect-yellow" style="font-size: 24px;padding: 20px;">手动整理报告</span>
                     </div>
                 </div>
 
@@ -260,24 +270,23 @@
 
                 <div class="row fragment">
                     <div class="col-md-2">
-                        自动测试:
+                        自动:
                     </div>
+                    <span class="arrow arrow-right col-md-1" style="transform: rotate(45deg);"></span>
                     <div class="col-md-2">
-                        <span class="my-rect-green" style="font-size: 24px;padding: 20px;">测试计划</span>
+                        <span class="my-rect-yellow" style="font-size: 24px;padding: 20px;">写测试脚本</span>
                     </div>
                     <span class="arrow arrow-right col-md-1"></span>
                     <div class="col-md-2">
                         <span class="my-rect-green" style="font-size: 24px;padding: 20px;">自动测试</span>
                     </div>
                     <span class="arrow arrow-right col-md-1"></span>
-                    <div class="col-md-3">
-                        <span class="my-rect-green" style="font-size: 24px;padding: 20px;">自动产生测试报告</span>
+                    <div class="col-md-2">
+                        <span class="my-rect-green" style="font-size: 24px;padding: 20px;">自动报告</span>
                     </div>
                 </div>
-            </section>
-            <section>
-                <h3>自动化测试</h3>
-                <span style="font-size: 96px;color: red;font-weight: bolder">so easy</span>
+                <hr/>
+                <span class="fragment" style="font-size: 96px;color: red;font-weight: bolder">so easy!</span>
             </section>
         </section>
 
@@ -296,7 +305,7 @@
                 </ul>
             </section>
             <section>
-                <h3>未来可研究方向</h3>
+                <h3>未来研究方向</h3>
                 <ul>
                     <li>
                         基于程序代码，自动化产生 geb 测试用例。
@@ -316,6 +325,7 @@
 
         <section>
             <h2 style="color:red;">Thank You</h2>
+            <p>如有任何意见和建议，请联系:</p>
             <p>178502261@qq.com</p>
         </section>
     </div>
