--- a/ppt/autoCheck-1.html
+++ b/ppt/autoCheck-1.html
@@ -207,25 +207,30 @@
             <section>
                 <h2>演示环节</h2>
                 <ol>
-                    <li>项目介绍</li>
+                    <li>项目简介</li>
+                    <li>访问项目</li>
                     <li>测试计划</li>
                     <li>检查点</li>
                     <li>手动测试vs自动化测试</li>
                 </ol>
             </section>
             <section>
-                <h3>项目介绍</h3>
+                <h2>项目简介</h2>
+                <img width="400px" height="400px" src="images/UseCase.PNG"/>
+                <img width="400px" height="100px" src="images/clazzStudent.png"/>
+            </section>
+            <section>
+                <h3>访问项目</h3>
                 <ul>
-                    <li>需求简介</li>
+                    <li>在线访问(阿里云)
+                        <br/>
+                        http://182.92.83.72:8080/autoCheck
+                    </li>
                     <li>手动编译部署
                         <br/>
                         要求环境: jdk, groovy, gradle
                         <br/>
                         https://github.com/usedtolove/groovy-study
-                    </li>
-                    <li>在线访问(阿里云)
-                        <br/>
-                        http://182.92.83.72:8080/autoCheck
                     </li>
                 </ul>
             </section>
